--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ default = ["fern", "log"]
 anyhow = "1.0.40"
 backtrace = "0.3.59"
 battery = "0.7.8"
-beef = "0.5.0"
 chrono = "0.4.19"
 crossterm = "0.18.2"
 ctrlc = { version = "3.1.9", features = ["termination"] }
@@ -57,6 +56,7 @@ sysinfo = "0.18.2"
 thiserror = "1.0.24"
 toml = "0.5.8"
 tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
+twox-hash = "1.6.0"
 typed-builder = "0.9.0"
 unicode-segmentation = "1.7.1"
 unicode-width = "0.1"
